--- a/.dev/sass/compat/woocommerce.scss
+++ b/.dev/sass/compat/woocommerce.scss
@@ -8,7 +8,6 @@
 
 		float: left;
 		padding: 0;
-		background: #121212;
 
 		.cart_list li.mini_cart_item {
 			padding: 0;
@@ -19,20 +18,17 @@
 			padding: .5em 1em;
 			text-indent: 0;
 
-			a {
+			a,
+			.quantity,
+			a:hover {
 				border-bottom: none;
 				color: #757575;
-			}
-
-			&:hover a,
-			a:hover {
-				color: #fff;
 			}
 
 			a:nth-child(2) {
 				margin: 0;
 				width: 100%;
-				padding: .3em 0 .5em 1em;
+				padding: .3em 0 5px 1em;
 				text-indent: 1px;
 			}
 
@@ -40,12 +36,11 @@
 
 		.quantity {
 			font-style: italic;
-			color: #fff;
 			padding-left: 1.3em;
 		}
 
 		.total {
-			color: #fff;
+			color: #757575;
 		}
 
 		ul.product_list_widget {
