--- a/style.css
+++ b/style.css
@@ -3058,24 +3058,6 @@ a {
   @media only screen and (max-width: 55em) {
     .side-masthead .site-title-wrapper {
       width: 80%; } }
-  .side-masthead .site-title {
-    line-height: 53px;
-    font-size: 30px;
-    font-weight: 300;
-    text-transform: uppercase;
-    margin: 5px 0 5px 10px;
-    text-align: left; }
-    @media only screen and (min-width: 55.063em) {
-      .side-masthead .site-title {
-        margin: 0;
-        text-align: center; } }
-    .side-masthead .site-title a {
-      color: #999; }
-      .side-masthead .site-title a:hover {
-        color: #999;
-        opacity: .8; }
-    .side-masthead .site-title .site-description {
-      float: left; }
   .side-masthead .site-description {
     display: none; }
   @media only screen and (min-width: 55.063em) {
@@ -3102,6 +3084,25 @@ a {
   .side-masthead .social-menu li {
     display: block;
     text-align: left; }
+
+.site-title {
+  line-height: 53px;
+  font-size: 30px;
+  font-weight: 300;
+  text-transform: uppercase;
+  margin: 5px 0 5px 10px;
+  text-align: left; }
+  @media only screen and (min-width: 55.063em) {
+    .site-title {
+      margin: 0;
+      text-align: center; } }
+  .site-title a {
+    color: #999; }
+    .site-title a:hover {
+      color: #999;
+      opacity: .8; }
+  .site-title .site-description {
+    float: left; }
 
 .navigation .nav-links {
   padding: 1.5em;
