--- a/.dev/sass/partials/_video-header.scss
+++ b/.dev/sass/partials/_video-header.scss
@@ -1,4 +1,5 @@
 .site-header.video-header {
+	overflow: hidden;
 	height: 100%;
 	padding: 0;
 	background-color: #000;
@@ -6,9 +7,12 @@
 
 	#wp-custom-header {
 		position: absolute;
+		height: 100vh;
 		top: 0;
 		left: 0;
-		height: 100%;
+		right: 0;
+		bottom: 0;
+		margin: auto;
 
 		img {
 			display: none;
@@ -18,16 +22,12 @@
 	#wp-custom-header-video-button {
 		position: absolute;
 		right: 1em;
+		top: 25vh;
 		opacity: 0.5;
+		z-index: 1;
 	}
 
 	iframe#wp-custom-header-video {
 		height: 100%;
-	}
-}
-
-.site-header {
-	#wp-custom-header img {
-		display: none;
 	}
 }
