Tweak menu variation styles

--- a/.dev/sass/compat/woocommerce.scss
+++ b/.dev/sass/compat/woocommerce.scss
@@ -28,6 +28,12 @@
 				text-indent: 1px;
 			}
 
+			dl.variation .variation-color {
+				margin-bottom: 0;
+				color: #757575;
+				line-height: 22px;
+			}
+
 		}
 
 		.quantity {
