--- a/.dev/sass/style.scss
+++ b/.dev/sass/style.scss
@@ -5,6 +5,8 @@
  * Author URI: https://www.godaddy.com/
  * Description: Escapade is a Primer child theme with a unique sidebar navigation.
  * Version: 1.1.3
+ * Tested up to: 5.9
+ * Requires PHP: 5.6.0
  * License: GPL-2.0
  * License URI: https://www.gnu.org/licenses/gpl-2.0.html
  * Text Domain: escapade
