--- a/style-rtl.css
+++ b/style-rtl.css
@@ -5,6 +5,8 @@
  * Author URI: https://www.godaddy.com/
  * Description: Escapade is a Primer child theme with a unique sidebar navigation.
  * Version: 1.1.3
+ * Tested up to: 5.9
+ * Requires PHP: 5.6.0
  * License: GPL-2.0
  * License URI: https://www.gnu.org/licenses/gpl-2.0.html
  * Text Domain: escapade
@@ -42,8 +44,6 @@ meta.foundation-data-attribute-namespace {
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
 html,
@@ -118,7 +118,6 @@ select {
   color: #fff !important;
   text-align: center;
   display: table;
-  -webkit-border-radius: 30px;
   border-radius: 30px;
   line-height: 48px;
   font-family: "Oswald", sans-serif;
@@ -157,8 +156,6 @@ meta.foundation-data-attribute-namespace {
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
 html,
@@ -233,7 +230,6 @@ select {
   color: #fff !important;
   text-align: center;
   display: table;
-  -webkit-border-radius: 30px;
   border-radius: 30px;
   line-height: 48px;
   font-family: "Oswald", sans-serif;
@@ -2159,8 +2155,6 @@ meta.foundation-data-attribute-namespace {
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
 html,
@@ -2235,7 +2229,6 @@ select {
   color: #fff !important;
   text-align: center;
   display: table;
-  -webkit-border-radius: 30px;
   border-radius: 30px;
   line-height: 48px;
   font-family: "Oswald", sans-serif;
@@ -2492,7 +2485,6 @@ pre {
   border-width: 1px;
   border-style: solid;
   border-color: rgba(0, 0, 0, 0.1);
-  -webkit-border-radius: 2px;
   border-radius: 2px;
   padding: rem-calc(2 5 1);
   margin-bottom: 1rem; }
@@ -2506,7 +2498,6 @@ code {
   border-width: 1px;
   border-style: solid;
   border-color: rgba(0, 0, 0, 0.1);
-  -webkit-border-radius: 2px;
   border-radius: 2px;
   padding: rem-calc(2 5 1); }
 
@@ -2652,7 +2643,6 @@ blockquote p {
     background: transparent !important;
     color: #000 !important;
     /* Black prints faster: h5bp.com/s */
-    -webkit-box-shadow: none !important;
     box-shadow: none !important;
     text-shadow: none !important; }
   a,
@@ -2737,7 +2727,6 @@ input[type="submit"] {
   -webkit-font-smoothing: auto;
   font-size: 1rem;
   line-height: 1;
-  -webkit-border-radius: 3px;
   border-radius: 3px;
   padding: .75em 1em;
   padding: .75rem 1rem;
@@ -2745,7 +2734,6 @@ input[type="submit"] {
   text-transform: uppercase;
   color: #fff;
   text-align: center;
-  -webkit-border-radius: 30px;
   border-radius: 30px;
   line-height: 48px;
   font-family: "Oswald", sans-serif;
@@ -2772,9 +2760,7 @@ input[type="radio"] {
 input[type="search"] {
   -webkit-appearance: textfield;
   /* Addresses appearance set to searchfield in S5, Chrome */
-  -webkit-box-sizing: content-box;
   /* Addresses box sizing set to border-box in S5, Chrome (include -moz to future-proof) */
-  -moz-box-sizing: content-box;
   box-sizing: content-box; }
 
 input[type="search"]::-webkit-search-decoration {
@@ -2807,8 +2793,6 @@ textarea {
   color: #0a0a0a;
   background-color: #fefefe;
   border: 2px solid rgba(0, 0, 0, 0.3);
-  -webkit-transform: 200ms background linear;
-  -ms-transform: 200ms background linear;
   transform: 200ms background linear;
   resize: none; }
   input[type="text"]:focus,
@@ -3063,25 +3047,16 @@ a {
   .menu-toggle div {
     background: #fff;
     margin: 0.43rem 0 0.43rem .86rem;
-    -webkit-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
     transform: rotate(0deg);
-    -webkit-transition: .15s ease-in-out;
     transition: .15s ease-in-out;
-    -webkit-transform-origin: right center;
-    -ms-transform-origin: right center;
     transform-origin: right center;
     height: 0.32rem; }
   .menu-toggle.open div:nth-child(1) {
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
     transform: rotate(45deg); }
   .menu-toggle.open div:nth-child(2) {
     width: 0%;
     opacity: 0; }
   .menu-toggle.open div:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
     transform: rotate(-45deg); }
 
 .side-masthead {
@@ -3181,7 +3156,6 @@ a {
     .navigation.pagination .nav-links .page-numbers {
       display: inline-block;
       border: none;
-      -webkit-border-radius: 3px;
       border-radius: 3px;
       line-height: 1;
       margin: 0 0.25em;
@@ -3227,9 +3201,7 @@ a {
   overflow: hidden; }
   .screen-reader-text:hover, .screen-reader-text:active, .screen-reader-text:focus {
     background-color: white;
-    -webkit-border-radius: 3px;
     border-radius: 3px;
-    -webkit-box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
     box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
     clip: auto !important;
     color: black;
@@ -3315,10 +3287,7 @@ a {
   .widget_search .search-field {
     width: 100%;
     background: #fff;
-    -webkit-border-radius: 2px;
     border-radius: 2px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box; }
     .widget_search .search-field:focus {
       background: #fff; }
@@ -3330,8 +3299,6 @@ a {
 .widget-title {
   font-family: "Oswald", sans-serif;
   position: relative;
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
   box-sizing: content-box; }
 
 .widget {
@@ -3361,7 +3328,6 @@ a {
 
 .widget_author .avatar {
   width: 80px;
-  -webkit-border-radius: 4px;
   border-radius: 4px;
   float: right;
   margin-left: 1em;
@@ -3402,7 +3368,6 @@ a {
     color: #0a0a0a;
     border-collapse: collapse;
     font-size: .9em;
-    -webkit-border-radius: 0 0 2px 2px;
     border-radius: 0 0 2px 2px;
     overflow: hidden;
     margin-bottom: 0; }
@@ -3415,7 +3380,6 @@ a {
       color: #222;
       padding: .75em .25em;
       font-weight: bold;
-      -webkit-border-radius: 2px 2px 0 0;
       border-radius: 2px 2px 0 0; }
     .widget_calendar #calendar_wrap #wp-calendar thead th {
       padding: .25em 0; }
@@ -3432,20 +3396,17 @@ a {
       .widget_calendar #calendar_wrap #wp-calendar tbody tr td a {
         color: #222;
         background: white;
-        -webkit-border-radius: 2px;
         border-radius: 2px;
         margin: 0 3px;
         display: block;
         font-weight: bold;
         border-bottom: none;
-        -webkit-transition: 200ms color linear;
         transition: 200ms color linear; }
     .widget_calendar #calendar_wrap #wp-calendar tfoot td {
       padding: .5em 1em;
       font-weight: bold; }
       .widget_calendar #calendar_wrap #wp-calendar tfoot td a {
         color: #0a0a0a;
-        -webkit-transition: 200ms color linear;
         transition: 200ms color linear; }
         .widget_calendar #calendar_wrap #wp-calendar tfoot td a:hover {
           color: #008CBA; }
@@ -3608,7 +3569,6 @@ html {
 .more-link {
   font-family: "Oswald", sans-serif;
   font-weight: normal;
-  -webkit-border-radius: 0;
   border-radius: 0;
   border: 1px solid #008CBA;
   padding: .5em 1em;
@@ -3711,7 +3671,6 @@ article.format-link {
   .comment-list .comment-reply-link:after {
     content: " \2192"; }
   .comment-list .comment-awaiting-moderation {
-    -webkit-border-radius: 4px;
     border-radius: 4px;
     background-color: #d9d9d9;
     color: #666;
@@ -3725,7 +3684,6 @@ article.format-link {
   right: -1em;
   right: -1rem;
   position: relative;
-  -webkit-border-radius: 3px;
   border-radius: 3px; }
 
 .comment-form label .required {
@@ -3774,8 +3732,6 @@ img[class*="wp-image-"] {
   margin-bottom: 1em;
   margin-bottom: 1rem;
   max-width: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box; }
   .wp-caption img[class*="wp-image-"] {
     display: block;
@@ -3839,42 +3795,34 @@ img[class*="wp-image-"] {
 
 .gallery-columns-2 .gallery-item {
   max-width: 48%;
-  max-width: -webkit-calc(50% - 4px);
   max-width: calc(50% - 4px); }
 
 .gallery-columns-3 .gallery-item {
   max-width: 32%;
-  max-width: -webkit-calc(33.3% - 4px);
   max-width: calc(33.3% - 4px); }
 
 .gallery-columns-4 .gallery-item {
   max-width: 23%;
-  max-width: -webkit-calc(25% - 4px);
   max-width: calc(25% - 4px); }
 
 .gallery-columns-5 .gallery-item {
   max-width: 19%;
-  max-width: -webkit-calc(20% - 4px);
   max-width: calc(20% - 4px); }
 
 .gallery-columns-6 .gallery-item {
   max-width: 15%;
-  max-width: -webkit-calc(16.7% - 4px);
   max-width: calc(16.7% - 4px); }
 
 .gallery-columns-7 .gallery-item {
   max-width: 13%;
-  max-width: -webkit-calc(14.28% - 4px);
   max-width: calc(14.28% - 4px); }
 
 .gallery-columns-8 .gallery-item {
   max-width: 11%;
-  max-width: -webkit-calc(12.5% - 4px);
   max-width: calc(12.5% - 4px); }
 
 .gallery-columns-9 .gallery-item {
   max-width: 9%;
-  max-width: -webkit-calc(11.1% - 4px);
   max-width: calc(11.1% - 4px); }
 
 .gallery-columns-1 .gallery-item:nth-of-type(1n),
@@ -3890,8 +3838,6 @@ img[class*="wp-image-"] {
 
 .gallery-caption {
   background-color: rgba(0, 0, 0, 0.7);
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   color: #fff;
   margin: 0;
@@ -4019,7 +3965,6 @@ body.layout-one-column-narrow #content {
     height: 100%; }
 
 .featured-content .entry-header {
-  -webkit-background-size: cover;
   background-size: cover; }
   .featured-content .entry-header,
   .featured-content .entry-header .entry-title,
@@ -4153,8 +4098,6 @@ body.layout-one-column-narrow #content {
     position: relative; }
     .footer-widget-area .footer-widget .widget {
       padding: 0 45px 0 0;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
       box-sizing: border-box; }
     @media only screen and (min-width: 64.063em) {
       .footer-widget-area .footer-widget {
@@ -4174,11 +4117,7 @@ body.layout-one-column-narrow #content {
       font-size: 22px;
       position: absolute;
       right: 0;
-      -webkit-transform: rotate(-90deg);
-      -ms-transform: rotate(-90deg);
       transform: rotate(-90deg);
-      -webkit-transform-origin: right top 0;
-      -ms-transform-origin: right top 0;
       transform-origin: right top 0;
       width: 1000px;
       text-align: left;
@@ -4257,7 +4196,6 @@ body.layout-one-column-narrow #content {
     padding: 0; }
 
 .featured-content {
-  -webkit-background-size: cover;
   background-size: cover; }
   .featured-content,
   .featured-content .entry-title a {
@@ -4308,7 +4246,6 @@ body.layout-one-column-narrow #content {
   border: 0;
   width: 32px;
   height: 32px;
-  -webkit-transition: 200ms opacity;
   transition: 200ms opacity;
   color: #fff; }
   .site-info .social-menu a:before {
@@ -4430,7 +4367,6 @@ header .social-menu {
     max-height: 250px;
     overflow-y: auto;
     border: none;
-    -webkit-box-shadow: none;
     box-shadow: none;
     display: inline-block;
     background: inherit; }
@@ -4490,7 +4426,6 @@ header .social-menu {
 .woocommerce-page span.onsale,
 .woocommerce-page ul.products li.product .onsale {
   padding: 2px 8px;
-  -webkit-border-radius: 0;
   border-radius: 0;
   margin: 0;
   min-height: auto;
@@ -4528,7 +4463,6 @@ header .social-menu {
 
 li.menu-item-has-children.primer-wc-cart-menu:hover ul.primer-wc-cart-sub-menu {
   background: #fefefe;
-  -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2); }
   li.menu-item-has-children.primer-wc-cart-menu:hover ul.primer-wc-cart-sub-menu li:hover {
     background: #fefefe; }
@@ -4584,15 +4518,11 @@ body.woocommerce-cart .primer-wc-cart-sub-menu {
     [class^="wp-block-"].alignfull {
       max-width: inherit; } }
   [class^="wp-block-"].alignfull img {
-    width: -webkit-calc( 100% + 8.875rem);
     width: calc( 100% + 8.875rem);
-    max-width: -webkit-calc( 100% + 8.875rem);
     max-width: calc( 100% + 8.875rem); }
     @media only screen and (max-width: 55em) {
       [class^="wp-block-"].alignfull img {
-        max-width: -webkit-calc( 100% + 4.4375rem);
         max-width: calc( 100% + 4.4375rem);
-        width: -webkit-calc( 100% + 4.4375rem);
         width: calc( 100% + 4.4375rem); } }
 
 [class^="wp-block-"].alignwide {
